[gd_scene load_steps=10 format=3 uid="uid://cnt6ak31ysp0c"]

[ext_resource type="Script" path="res://Scripts/Turrets/Turret_Item_Box.gd" id="1_wexon"]
[ext_resource type="Texture2D" uid="uid://5kdq665gr5g1" path="res://Sprites/Turrets/Turret/Turret_COMP.png" id="2_0bqlr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfhok"]
bg_color = Color(0.270588, 0.286275, 0.368627, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 15
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncx0b"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.854902, 0.403922, 0.329412, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6v1p4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lonny"]
bg_color = Color(0, 0, 0, 0.486275)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 7.0
expand_margin_top = 7.0
expand_margin_right = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywga5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huk8p"]
bg_color = Color(0, 0, 0, 0.486275)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.290761, 0.54222, 0.369018, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 5.0
expand_margin_top = 7.0
expand_margin_right = 7.0
expand_margin_bottom = 7.0

[sub_resource type="Theme" id="Theme_k2x8x"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(0.960542, 0.455971, 0.370506, 1)
Button/colors/font_focus_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 1)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 16
Button/styles/disabled = SubResource("StyleBoxFlat_ncx0b")
Button/styles/focus = SubResource("StyleBoxEmpty_6v1p4")
Button/styles/hover = SubResource("StyleBoxFlat_lonny")
Button/styles/normal = SubResource("StyleBoxFlat_ywga5")
Button/styles/pressed = SubResource("StyleBoxFlat_huk8p")

[node name="Control" type="Control"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -1005.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wexon")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qfhok")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.14
anchor_right = 1.0
anchor_bottom = 1.14
offset_top = 10.5
offset_bottom = -10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="LBL_Name" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "[NAME]"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(39.505, 43)
layout_mode = 2

[node name="Sprite_Turret" type="Sprite2D" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
position = Vector2(-11.135, -7.56)
scale = Vector2(4, 4)
texture = ExtResource("2_0bqlr")
centered = false

[node name="LBL_Price" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PRICE"

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BTN_Buy" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_k2x8x")
text = "BUY"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2701, 0.285085, 0.37, 1)

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/BTN_Buy" to="." method="_on_btn_buy_pressed"]
